<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"/>

    <EditText

        android:id="@+id/txtFoot"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint1"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/txtPaymentMiles"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_below="@+id/txtFoot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="numberDecimal"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtFee"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPaymentMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="numberDecimal"
        android:textSize="13sp" />


    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btnRental"
        android:id="@+id/btnRental"
        android:layout_below="@+id/txtPaymentMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgTruck"
        android:layout_below="@+id/btnRental"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/truck"
        android:layout_marginTop="5dp" />

</RelativeLayout>








